# open-childcare

./: .gitignore  README.md  TODO.md  pyproject.toml  run_all.py
.github/workflows/: update-data.yml
data/: ebridge-2026-07-01.json  ecda_upcoming-latest.json  geocoded-2026-06-18.json  geocoded-2026-06-24.json  geocoded-latest.json  learning_vision-latest.json  lifesg_fees-2026-06-22.json  lifesg_fees-2026-06-24.json  lifesg_fees-2026-06-26.json  lifesg_fees-2026-06-29.json  lifesg_fees-2026-06-30.json  lifesg_fees-2026-07-01.json  lifesg_fees-2026-07-02.json  lifesg_fees-latest.json  moe_kindergartens-2026-06-30.json  my_world_preschool-2026-06-16.json  my_world_preschool-latest.json  myfirstskool-2026-06-18.json  myfirstskool-2026-06-21.json  myfirstskool-2026-06-27.json  myfirstskool-2026-07-01.json  myfirstskool-latest.json  myfirstskool.json  pcf_sparkletots-2026-06-19.json  pcf_sparkletots-2026-06-26.json  pcf_sparkletots-2026-06-28.json  pcf_sparkletots-2026-07-01.json  pcf_sparkletots-latest.json  skool4kidz-2026-06-17.json  star_learners-2026-06-30.json
docs/: index.html  report-long-term.md  report-short-term.md
docs/data/: centres.json
scrapers/: ebridge.py  ecda_data_gov.py  ecda_upcoming.py  geocode.py  learning_vision.py  lifesg.py  lifesg_fees.py  merge.py  moe_kindergartens.py  my_world_preschool.py  myfirstskool.py  pcf_sparkletots.py  report.py  skool4kidz.py  star_learners.py  utils.py  web_export.py
