[project]
name = "childcare-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "playwright>=1.60.0",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
]
